--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,5 +12,5 @@
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
   <div>testing first update..</div>
-  <div>testing second update..</div>
+  <ion-button color="primary">Primary</ion-button>
 </ion-content>
