--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,14 +3,36 @@
     <ion-title>
       Ionic Blank
     </ion-title>
+    <ion-button color="primary" (click)="stopscanning()">STOP </ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content  style="background: none transparent;" [class.show-qr-scanner]="isOn"> <!----> 
+
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <div>Code push added in this app ..</div>
   </div>
-  <div>testing first update..</div>
-  <ion-button color="primary">Primary</ion-button>
+  
+  <ion-button color="primary" 
+  (click)="getSimData()">Get Sim Data </ion-button>
+  <ion-button color="primary" 
+  (click)="getQRScan()">Scan QRCode</ion-button>
+  {{ simInfo }}
+  <!-- <ion-list *ngIf="simInfo">
+    <ion-item  ><b>simSerialNumber</b> {{ simInfo.simSerialNumber }}</ion-item>  
+  </ion-list> -->
+  <!-- <ion-card  *ngFor= "let card of cards" >
+    <ion-card-header>
+      {{card.carrierName}}
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item><b>simSlotIndex</b> {{ card.simSlotIndex }}</ion-item>  
+        <ion-item><b>displayName</b> {{ card.displayName }}</ion-item>  
+        <ion-item><b>isNetworkRoaming</b> {{ card.isNetworkRoaming }}</ion-item>  
+        <ion-item><b>isDataRoaming</b> {{ card.isDataRoaming }}</ion-item>  
+      </ion-list>
+    </ion-card-content>
+  </ion-card> -->
+ 
 </ion-content>
